Fix node operator page info bar on mobile view

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -6310,6 +6310,10 @@ ul.submit-options li:last-of-type {
     margin-left: 245px;
   }
 
+	.dashboard-message p {
+		font-size: 9px;
+	}
+
 }
 
 
